set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(EDPC CXX)
add_executable(EDPC_A a.cpp)
add_executable(EDPC_B b.cpp)
add_executable(EDPC_C c.cpp)
add_executable(EDPC_D d.cpp)
add_executable(EDPC_E e.cpp)
add_executable(EDPC_F f.cpp)
add_executable(EDPC_G g.cpp)
add_executable(EDPC_H h.cpp)
add_executable(EDPC_I i.cpp)
add_executable(EDPC_J j.cpp)
add_executable(EDPC_K k.cpp)
add_executable(EDPC_L l.cpp)
add_executable(EDPC_M m.cpp)
add_executable(EDPC_N n.cpp)
add_executable(EDPC_O o.cpp)
add_executable(EDPC_P p.cpp)
add_executable(EDPC_Q q.cpp)
add_executable(EDPC_R r.cpp)
add_executable(EDPC_S s.cpp)
add_executable(EDPC_T t.cpp)
add_executable(EDPC_U u.cpp)
add_executable(EDPC_V v.cpp)
add_executable(EDPC_W w.cpp)
add_executable(EDPC_X x.cpp)
add_executable(EDPC_Y y.cpp)
add_executable(EDPC_Z z.cpp)