set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(TDPC CXX)
add_executable(TDPC_A a.cpp)
add_executable(TDPC_B b.cpp)
add_executable(TDPC_C c.cpp)
add_executable(TDPC_D d.cpp)
add_executable(TDPC_E e.cpp)
add_executable(TDPC_F f.cpp)
add_executable(TDPC_G g.cpp)
add_executable(TDPC_H h.cpp)
add_executable(TDPC_I i.cpp)
add_executable(TDPC_J j.cpp)
add_executable(TDPC_K k.cpp)
add_executable(TDPC_L l.cpp)
add_executable(TDPC_M m.cpp)
add_executable(TDPC_N n.cpp)
add_executable(TDPC_O o.cpp)
add_executable(TDPC_P p.cpp)
add_executable(TDPC_Q q.cpp)
add_executable(TDPC_R r.cpp)
add_executable(TDPC_S s.cpp)
add_executable(TDPC_T t.cpp)