set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(KUPC2018 CXX)
add_executable(KUPC2018_A a.cpp)
add_executable(KUPC2018_B b.cpp)
add_executable(KUPC2018_C c.cpp)
add_executable(KUPC2018_D d.cpp)
add_executable(KUPC2018_E e.cpp)
add_executable(KUPC2018_F f.cpp)
add_executable(KUPC2018_G g.cpp)
add_executable(KUPC2018_H h.cpp)
add_executable(KUPC2018_I i.cpp)
add_executable(KUPC2018_J j.cpp)
add_executable(KUPC2018_K k.cpp)
add_executable(KUPC2018_L l.cpp)
add_executable(KUPC2018_M m.cpp)