set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(Mujin2018 CXX)
add_executable(Mujin2018_A a.cpp)
add_executable(Mujin2018_B b.cpp)
add_executable(Mujin2018_C c.cpp)
add_executable(Mujin2018_D d.cpp)
add_executable(Mujin2018_E e.cpp)
add_executable(Mujin2018_F f.cpp)
add_executable(Mujin2018_G g.cpp)
add_executable(Mujin2018_H h.cpp)