set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(paken03 CXX)
add_executable(paken03_A a.cpp)
add_executable(paken03_B b.cpp)
add_executable(paken03_C c.cpp)
add_executable(paken03_D d.cpp)
add_executable(paken03_E e.cpp)
add_executable(paken03_F f.cpp)
add_executable(paken03_G g.cpp)
add_executable(paken03_H h.cpp)
add_executable(paken03_I i.cpp)
add_executable(paken03_J j.cpp)