set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(CODEFESTIVAL2016_qualC CXX)
add_executable(CODEFESTIVAL2016_qualC_A a.cpp)
add_executable(CODEFESTIVAL2016_qualC_B b.cpp)
add_executable(CODEFESTIVAL2016_qualC_C c.cpp)
add_executable(CODEFESTIVAL2016_qualC_D d.cpp)
add_executable(CODEFESTIVAL2016_qualC_E e.cpp)