set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(CODEFESTIVAL2017_final CXX)
add_executable(CODEFESTIVAL2017_final_A a.cpp)
add_executable(CODEFESTIVAL2017_final_B b.cpp)
add_executable(CODEFESTIVAL2017_final_C c.cpp)
add_executable(CODEFESTIVAL2017_final_D d.cpp)
add_executable(CODEFESTIVAL2017_final_E e.cpp)
add_executable(CODEFESTIVAL2017_final_F f.cpp)
add_executable(CODEFESTIVAL2017_final_G g.cpp)
add_executable(CODEFESTIVAL2017_final_H h.cpp)
add_executable(CODEFESTIVAL2017_final_I i.cpp)
add_executable(CODEFESTIVAL2017_final_J j.cpp)