set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(CODEFESTIVAL2017_THANKS CXX)
add_executable(CODEFESTIVAL2017_THANKS_A a.cpp)
add_executable(CODEFESTIVAL2017_THANKS_B b.cpp)
add_executable(CODEFESTIVAL2017_THANKS_C c.cpp)
add_executable(CODEFESTIVAL2017_THANKS_D d.cpp)
add_executable(CODEFESTIVAL2017_THANKS_E e.cpp)
add_executable(CODEFESTIVAL2017_THANKS_F f.cpp)
add_executable(CODEFESTIVAL2017_THANKS_G g.cpp)
add_executable(CODEFESTIVAL2017_THANKS_H h.cpp)