set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(CODEFESTIVAL2018_FINAL CXX)
add_executable(CODEFESTIVAL2018_FINAL_A a.cpp)
add_executable(CODEFESTIVAL2018_FINAL_B b.cpp)
add_executable(CODEFESTIVAL2018_FINAL_C c.cpp)
add_executable(CODEFESTIVAL2018_FINAL_D d.cpp)
add_executable(CODEFESTIVAL2018_FINAL_E e.cpp)
add_executable(CODEFESTIVAL2018_FINAL_F f.cpp)
add_executable(CODEFESTIVAL2018_FINAL_G g.cpp)
add_executable(CODEFESTIVAL2018_FINAL_H h.cpp)
add_executable(CODEFESTIVAL2018_FINAL_I i.cpp)
add_executable(CODEFESTIVAL2018_FINAL_J j.cpp)