set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(CODEFESTIVAL2018_THANKS CXX)
add_executable(CODEFESTIVAL2018_THANKS_A a.cpp)
add_executable(CODEFESTIVAL2018_THANKS_B b.cpp)
add_executable(CODEFESTIVAL2018_THANKS_C c.cpp)
add_executable(CODEFESTIVAL2018_THANKS_D d.cpp)
add_executable(CODEFESTIVAL2018_THANKS_E e.cpp)
add_executable(CODEFESTIVAL2018_THANKS_F f.cpp)
add_executable(CODEFESTIVAL2018_THANKS_G g.cpp)
add_executable(CODEFESTIVAL2018_THANKS_H h.cpp)