set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(NIKKEI2019_EX CXX)
add_executable(NIKKEI2019_EX_A a.cpp)
add_executable(NIKKEI2019_EX_B b.cpp)
add_executable(NIKKEI2019_EX_C c.cpp)
add_executable(NIKKEI2019_EX_D d.cpp)
add_executable(NIKKEI2019_EX_E e.cpp)
add_executable(NIKKEI2019_EX_F f.cpp)
add_executable(NIKKEI2019_EX_G g.cpp)
add_executable(NIKKEI2019_EX_H h.cpp)