set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
project(NIKKEI2019_FINAL CXX)
add_executable(NIKKEI2019_FINAL_A a.cpp)
add_executable(NIKKEI2019_FINAL_B b.cpp)
add_executable(NIKKEI2019_FINAL_C c.cpp)
add_executable(NIKKEI2019_FINAL_D d.cpp)
add_executable(NIKKEI2019_FINAL_E e.cpp)
add_executable(NIKKEI2019_FINAL_F f.cpp)
add_executable(NIKKEI2019_FINAL_G g.cpp)
add_executable(NIKKEI2019_FINAL_H h.cpp)